--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>ReacTable 3D Emulator</title>
-  <style>
-    body { margin:0; overflow:hidden; }
-    #ui { position:absolute; top:10px; left:10px; z-index:1; background:rgba(255,255,255,0.8); padding:4px; font-family:sans-serif; }
-    #tutorial { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); color:#fff; display:flex; align-items:center; justify-content:center; text-align:center; }
-    #tutorial.hidden { display:none; }
-    #tutorial button { margin-top:1rem; padding:0.5rem 1rem; }
-  </style>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div id="ui">
