Iniciar audio bajo interacción del usuario

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <div id="ui">
+    <button id="audioBtn">Iniciar audio</button>
     <label>Tipo de cubo:
       <select id="cubeType">
         <option value="osc">Generador</option>
@@ -23,7 +24,7 @@
   </div>
   <div id="tutorial" class="hidden">
     <div>
-      <p>Haz clic en la mesa para crear cubos y comienza a experimentar.</p>
+      <p>Haz clic en "Iniciar audio" y luego en la mesa para crear cubos y comenzar a experimentar.</p>
       <button id="startBtn">Comenzar</button>
     </div>
   </div>
